modifique el html mientras hacia el header para darle selectores a css

--- a/index.html
+++ b/index.html
@@ -11,22 +11,34 @@
 <body>
 
     <div id="container">
-        <div class="header-logo">
-            <a href="#container"><img >LOGO</a>
+        <div class="header">
+            <div class="header-logo">
+                <a href="#container"><img >HEADER LOGO</a>
+            </div>
+            <div class="header-nav">
+                <ul>
+                    <li><a href="">header-link-one</a></li>
+                    <li><a href="">header-link-two</a></li>
+                    <li><a href="">header-link-three</a></li>
+                </ul>
+            </div>
         </div>
-        <div class="header-nav">
-            <ul>
-                <li><a href="">header-link-one</a></li>
-                <li><a href="">header-link-two</a></li>
-                <li><a href="">header-link-three</a></li>
-            </ul>
+
+        <div class="header-text">
+            <div class="header-text-container">
+                <div class="title">This website is awesome</div>
+                <div class="title-text">
+                    This website has some subtext that goes here undr the main title. it`s a smaller font and the color is lower contrast</div>
+                    <div class="button">
+                        <a class="btn">Sign up<a>
+                    </div>
+                </div>
+                
+                <div class="header-img">
+                    <img class="img-example" src="./images/imagen -de-ejemplo.png" alt="imagen-random">
+                </div>
+            </div>
         </div>
-        <div>
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here undr the main title. it`s a smaller font and the color is lower contrast</p>
-            <img src="./images/imagen -de-ejemplo.png" alt="imagen-random">
-        </div>
-    </div>
 
     <div id="content">
 
