--- a/index.html
+++ b/index.html
@@ -42,50 +42,61 @@
 
     <div id="content">
 
-        <div>
-            <h2>Some random information.</h2>
+        <div class="cards-title">
+            Some random information.
         </div>
 
         <div class="cards-container">
             <div class="card">
-                <div clas="img-card">
+                <div class="img-card">
                     <img src="" alt="">
                 </div>
                 <div class="card-text">
-                    <p>This is some subtext under an illustration or image.</p>
+                    This is some subtext under an illustration or image.
                 </div>
             </div>
             <div class="card">
-                <div clas="img-card">
+                <div class="img-card">
                     <img src="" alt="">
                 </div>
                 <div class="card-text">
-                    <p>This is some subtext under an illustration or image.</p>
+                    This is some subtext under an illustration or image.
                 </div>
             </div>
             <div class="card">
-                <div clas="img-card">
+                <div class="img-card">
                     <img src="" alt="">
                 </div>
                 <div class="card-text">
-                    <p>This is some subtext under an illustration or image.</p>
+                    This is some subtext under an illustration or image.
                 </div>
             </div>
             <div class="card">
-                <div clas="img-card">
+                <div class="img-card">
                     <img src="" alt="">
                 </div>
                 <div class="card-text">
-                    <p>This is some subtext under an illustration or image.</p>
+                    This is some subtext under an illustration or image.
                 </div>
             </div>
         </div>
 
         <div id="cita">
-            <p>This is an inspiring quote, or a testimonial from a csutomer. Maybe it`s just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
-            <p>-Thor, God of Thunder</p>
+            This is an inspiring quote, or a testimonial from a csutomer. Maybe it`s just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.
+            <div class="autor-cita">-Thor, God of Thunder</div>
         </div>
 
+    </div>
+
+    <div id="alert">
+        <div class="alert-title">Call to action! it`s time!</div>
+        <div class="alert-text">Sign up for our product by clickung that button rignt over there!</div>
+        
+        <div class="alert-button"><a href="">Sign up</a></div>
+    </div>
+
+    <div class="footer">
+        <footer>Copyright © The Odin Project 2023</footer>
     </div>
 
 </body>
